--- a/Config/SequenceR/20878_SequenceR_origin.yaml
+++ b/Config/SequenceR/20878_SequenceR_origin.yaml
@@ -10,24 +10,24 @@ src_seq_length_trunc: 1010
 tgt_seq_length_trunc: 1010
 
 # common vocabulary for CoCoNut and target
-share_vocab: True
+share_vocab: False
 dynamic_dict: True
 # Corpus opts:
 data:
     train:
-        path_src: /root/zwk/DDPR_DATA/data/M1000_SequenceR/trn.buggy
-        path_tgt: /root/zwk/DDPR_DATA/data/M1000_SequenceR/trn.fix
+        path_src: F:/NPR_DATA0306/Processed_SR/trn.buggy
+        path_tgt: F:/NPR_DATA0306/Processed_SR/trn.fix
         transforms: []
         weight: 1
     valid:
-        path_src: /root/zwk/DDPR_DATA/data/M1000_SequenceR/val.buggy
-        path_tgt: /root/zwk/DDPR_DATA/data/M1000_SequenceR/val.fix
+        path_src: F:/NPR_DATA0306/Processed_SR/val.buggy
+        path_tgt: F:/NPR_DATA0306/Processed_SR/val.fix
         transforms: []
 
 src_vocab_size: 200000
 tgt_vocab_size: 200000
-src_vocab: /root/zwk/DDPR_DATA/data/M1000_SequenceR/SequenceR.vocab
-tgt_vocab: /root/zwk/DDPR_DATA/data/M1000_SequenceR/SequenceR.vocab
+src_vocab: F:/NPR_DATA0306/Processed_SR/buggy.vocab
+tgt_vocab: F:/NPR_DATA0306/Processed_SR/fix.vocab
 
 
 #log_file
